--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "react": "^16.3.2",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.2",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
     "react-table": "^6.8.2",
     "react-table-vertical-heading": "^0.1.4",
+    "redux": "^4.0.0",
     "table": "^4.0.3"
   },
   "scripts": {
