--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "react-table": "^6.8.2",
     "react-table-vertical-heading": "^0.1.4",
     "redux": "^4.0.0",
+    "redux-thunk": "^2.2.0",
+    "sweetalert2": "^7.19.3",
+    "sweetalert2-react": "^0.7.2",
     "table": "^4.0.3"
   },
   "scripts": {
